--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -5,5 +5,10 @@
 	</head>
 	<body>
 		<h1>Hello {{ name }}</h1>
+		<ul>
+			{% for feature in features %}
+				<li>{{ feature }}</li>
+			{% endfor %}
+		</ul>
 	</body>
 </html>
