Add base.html template and inherit home and contact from  it

--- a/django.prj/dlp/templates/contact.html
+++ b/django.prj/dlp/templates/contact.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Django Learning Path</title>
-	</head>
-	<body>
-		<h1>Hello {{ name }}</h1>
-		<a href="mailto:test@test.com">Send us an email</a>
-	</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+	<a href="mailto:test@test.com">Send us an email</a>
+{% endblock content %}
