--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -5,10 +5,8 @@
 	</head>
 	<body>
 		<h1>Hello {{ name }}</h1>
-		<ul>
-			{% for feature in features %}
-				<li>{{ feature }}</li>
-			{% endfor %}
-		</ul>
+		{% block content %}
+		Here you will place the content
+		{% endblock content %}
 	</body>
 </html>
