Customize HTML title with blocks

--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Django Learning Path</title>
+		<title>{% block html_title %}Django Learning Path{% endblock html_title %}</title>
 	</head>
 	<body>
 		<h1>Hello {{ name }}</h1>
