--- a/django.prj/dlp/templates/home.html
+++ b/django.prj/dlp/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block html_title %}{{ block.super }} - Home{% endblock html_title %}
+
 {% block content %}
 	<ul>
 		{% for feature in features %}
