Agrego lista de productos a 'products.html'

--- a/django.prj/dlp/templates/products.html
+++ b/django.prj/dlp/templates/products.html
@@ -4,4 +4,9 @@
 
 {% block content %}
 	<h2>This are the products we're offering at the moment</h2>
+		<ul>
+		{% for product in products_list %}
+			<li>{{ product }}</li>
+		{% endfor %}
+	</ul>
 {% endblock content %}
