--- a/django.prj/dlp/templates/services.html
+++ b/django.prj/dlp/templates/services.html
@@ -6,8 +6,8 @@
 	<h2>Services</h2>
 	<p>This are the services available at the moment</p>
 	<ul>
-		<li>Product 1</li>
-		<li>Prduct 2</li>
-		<li>Product 3</li>
+		<li>Service 1</li>
+		<li>Service 2</li>
+		<li>Service 3</li>
 	</ul>
 {% endblock content %}
