Install CSS Framework Materializecss from CDN

--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title>{% block html_title %}Django Learning Path{% endblock html_title %}</title>
+
+		 <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/css/materialize.min.css">
+
 	</head>
 	<body>
 		{% block main_menu %}
@@ -11,5 +15,9 @@
 		{% block content %}
 		Here you will place the content
 		{% endblock content %}
+
+
+		  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/js/materialize.min.js"></script>
 	</body>
 </html>
