--- a/django.prj/dlp/templates/main_menu.html
+++ b/django.prj/dlp/templates/main_menu.html
@@ -5,4 +5,5 @@
 	<li><a href="/team">Team</a></li>
 	<li><a href="/services">Services</a></li>
 	<li><a href="/products">Products</a></li>
+	<li><<a href="/members">Miembros </a></li>
 </ul>
