--- a/django.prj/dlp/templates/main_menu.html
+++ b/django.prj/dlp/templates/main_menu.html
@@ -5,5 +5,6 @@
 	<li><a href="/team">Team</a></li>
 	<li><a href="/services">Services</a></li>
 	<li><a href="/products">Products</a></li>
-	<li><<a href="/members">Miembros </a></li>
+	<li><a href="/members">Miembros </a></li>
+	<li><a href="/news">News </a></li>
 </ul>
