--- a/django.prj/dlp/templates/main_menu.html
+++ b/django.prj/dlp/templates/main_menu.html
@@ -7,4 +7,6 @@
 	<li><a href="/products">Products</a></li>
 	<li><a href="/members">Miembros </a></li>
 	<li><a href="/news">News </a></li>
+	<li><a href="/gallery">Gallery </a></li>
+
 </ul>
