--- a/django.prj/dlp/templates/shows.html
+++ b/django.prj/dlp/templates/shows.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<h2>Shows</h2>
-	{% for show in SHOW_LIST %}
+	{% for show in shows%}
 		<ul>	
 			<li>{{show.location}}</li>
 			<li>{{show.date}}</li>
