--- a/django.prj/dlp/templates/members.html
+++ b/django.prj/dlp/templates/members.html
@@ -7,6 +7,9 @@
 	{% for person in members %}
 		<ul>
 			<li>{{ person.name }}</li>
+			<li> {{ person.instrument }}</li>
+			<li> {{ person.description }}</li>
+			<li> {{ person.gender }}</li>
 		</ul>
 	{% endfor %}
 
