--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -5,19 +5,54 @@
 
 		 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/css/materialize.min.css">
+  <style type="text/css">
+    body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
 
+  main {
+    flex: 1 0 auto;
+  }
+</style>
 	</head>
 	<body>
-		{% block main_menu %}
+<header>
+	<nav>
+    <div class="nav-wrapper">
+     <a href="#!" class="brand-logo">Logo de la Banda</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+       {% block main_menu %}
 			{% include "main_menu.html" %}
 		{% endblock %}
-		<h1>Hello {{ name }}</h1>
+    </div>
+  </nav>
+</header>
+
+<main>
+		<!-- contenido de django -->
 		{% block content %}
 		Here you will place the content
 		{% endblock content %}
+</main>
 
+<footer class="page-footer">
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+ </footer>
 
 		  <!-- Compiled and minified JavaScript -->
+		  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/js/materialize.min.js"></script>
+  <script type="text/JavaScript">
+  $(".button-collapse").sideNav();
+  </script>
+
+
 	</body>
 </html>
