--- a/django.prj/dlp/templates/main_menu.html
+++ b/django.prj/dlp/templates/main_menu.html
@@ -1,12 +1,30 @@
-<ul>
-	<li><a href="/">Inicio</a></li>
+
+<nav>
+    <div class="nav-wrapper">
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/">Inicio</a></li>
 	<li><a href="/contact">Contact</a></li>
 	<li><a href="/portfolio">Portfolio</a></li>
 	<li><a href="/team">Team</a></li>
 	<li><a href="/services">Services</a></li>
 	<li><a href="/products">Products</a></li>
-	<li><a href="/members">Miembros </a></li>
+	<li><a href="/members">Members </a></li>
 	<li><a href="/news">News </a></li>
 	<li><a href="/gallery">Gallery </a></li>
 	<li><a href="/shows">Shows </a></li>
-</ul>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="/">Inicio</a></li>
+	<li><a href="/contact">Contact</a></li>
+	<li><a href="/portfolio">Portfolio</a></li>
+	<li><a href="/team">Team</a></li>
+	<li><a href="/services">Services</a></li>
+	<li><a href="/products">Products</a></li>
+	<li><a href="/members">Members </a></li>
+	<li><a href="/news">News </a></li>
+	<li><a href="/gallery">Gallery </a></li>
+	<li><a href="/shows">Shows </a></li>
+      </ul>
+    </div>
+  </nav>
+          
