Members style edited

--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -19,6 +19,7 @@
 	</head>
 	<body>
 <header>
+ <div class="navbar-fixed">
 	<nav>
     <div class="nav-wrapper">
      <a href="#!" class="brand-logo">Logo de la Banda</a>
@@ -28,6 +29,7 @@
 		{% endblock %}
     </div>
   </nav>
+  </div>
 </header>
 
 <main>
