--- a/django.prj/dlp/templates/gallery.html
+++ b/django.prj/dlp/templates/gallery.html
@@ -11,7 +11,7 @@
  {% for photo in gallery %}
  	<div class="col s3">     
              
-           <img class="materialboxed" data-caption="{{photo.caption}}" style="border-radius: 10px" height="200" width="200"  src="{{photo.image}}">
+           <img class="materialboxed" data-caption="{{photo.caption}}" style="border-radius: 10px" height="200" width="200"  src="{{photo.url}}">
 <br> 
 
             </div>
