--- a/django.prj/dlp/templates/gallery.html
+++ b/django.prj/dlp/templates/gallery.html
@@ -9,9 +9,9 @@
 <br>
 <div class="row">
  {% for photo in gallery %}
- 	<div class="col s3">     
+ 	<div class="col s12 m4">     
              
-           <img class="materialboxed" data-caption="{{photo.caption}}" style="border-radius: 10px" height="200" width="200"  src="{{photo.url}}">
+           <img class="materialboxed" data-caption="{{photo.caption}}" style="border-radius: 10px; width:100%;"  src="{{photo.url}}">
 <br> 
 
             </div>
