--- a/django.prj/dlp/templates/members.html
+++ b/django.prj/dlp/templates/members.html
@@ -9,11 +9,11 @@
 		 	<div class="col s3 center-align">
 			<img src="http://via.placeholder.com/200x200" class="circle">
 			<p><strong>{{ person.name }}</strong> </p>
-			<p> {{ person.instrument }}</p>
-			<p> {{ person.description }}</p>
-			<p> <small> {{ person.gender }} </small> </p> 
+			<p> He use's {{ person.instrument }}</p>
+			Information about him: <p> {{ person.description }}</p>
+			Gender: <p> <small> {{ person.gender }} </small> </p> 
 		</div>
 	{% endfor %}
 	</div>
 
-{% endblock content %}
+    {% endblock content %}
