--- a/django.prj/dlp/templates/products.html
+++ b/django.prj/dlp/templates/products.html
@@ -8,12 +8,23 @@
 		<h2>This are the products we're offering at the moment</h2>
 		<ul>
 			{% for product in products_list %}
-			<li>{{ product.name }} ({{product.type_of_product}})</li>
+			<li>{{ product.name }} <small><i> in Category {{product.type_of_product}}</i></small></li>
 			{% endfor %}
+			</ul>
+			<br>
+			<h5>Available products by category:</h5>
+			<ul class="browser-default">
+				{% for category in category_list %}
+					<li>{{ category.name }}</li>
+						<ul class="browser-default">
+					{% for prod in category.product_set.all %}
+						<li>{{ prod.name }}</li>
+					{% endfor %}
+						</ul>
+					</li>
+				{% endfor %}
 			</ul>
 		{% else %}
 		<h2>No Products Avaliable</h2>
 		{% endif %}
-
-
 {% endblock content %}
