--- a/django.prj/dlp/templates/base.html
+++ b/django.prj/dlp/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,6 +6,7 @@
 
 		 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/css/materialize.min.css">
+  <link rel="stylesheet" href="{% static 'products/css/style.css' %}">
   <style type="text/css">
     body {
     display: flex;
