--- a/django.prj/dlp/templates/members.html
+++ b/django.prj/dlp/templates/members.html
@@ -7,7 +7,7 @@
 <div class="row">
 	{% for person in members %}
 	 	<div class="col s3 center-align">
-			<img src="http://via.placeholder.com/200x200" class="circle">
+			<img src="{% if person.image %}{{ person.image.url }}{% else %}http://via.placeholder.com/200x200{% endif %}" class="circle">
 			<p><strong>{{ person.name }}</strong> </p>
 			<p>
 			{% if person.gender == 'M' %}He{% elif person.gender == 'F' %}She{% elif person.gender == 'O' %}Their{% endif %}
